# FastAPI

./: README.md  main.py  pyproject.toml
docs/: api-docs.html
