[project]
name = "fastapi-starter"
version = "0.1.0"
description = "A FastAPI starter project with automatic Swagger documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "holidays>=0.81",
    "pydantic>=2.11.9",
    "uvicorn[standard]>=0.24.0",
]
